[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdb-rag"
version = "0.1.0"
description = "Bridge legacy MySQL/MariaDB data into RAG pipelines without migration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Gaboexe0", email = "gaboexe0@example.com"}
]
keywords = ["mariadb", "mysql", "rag", "vector", "embedding", "hnsw"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gaboexe0/mdb-rag"
Repository = "https://github.com/gaboexe0/mdb-rag"
Issues = "https://github.com/gaboexe0/mdb-rag/issues"

[tool.pytest.ini_options]
markers = ["integration: requires real MariaDB 11.8 instance"]

[tool.hatch.build.targets.wheel]
packages = ["src/mdbrag"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
